--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "Xianglong Fu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "UWO B.Sc Statistics"
+  location         : "London, Ontario"
+  employer         : "Western University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "xfu84@uwo.ca" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
