--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : xianglong-fu-267849252
+  linkedin         : "xianglong-fu-267849252"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
