--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "UWO B.Sc Statistics\"
                      "Unimelb Master of Data Science. Specialized in Statistics"
-  location         : "London, Ontario"
+  location         : "Melbourne, Victoria, Australia"
   employer         : "University of Melbourne"
   uri              : # URL
   email            : "xianglongf@student.unimelb.edu.au" 
