--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ author:
   location         : "Melbourne, Victoria, Australia"
   employer         : "University of Melbourne"
   uri              : # URL
-  email            : "xianglongf@student.unimelb.edu.au" 
+  xianglongf@student.unimelb.edu.au            : "xianglongf@student.unimelb.edu.au" 
+  xfu84@uwo.ca     : "xfu84@uwo.ca"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
