--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   employer         : "University of Melbourne"
   uri              : # URL
   Email            : "xianglongf@student.unimelb.edu.au" 
-  Email            : "xfu84@uwo.ca"
+  # Email            : "xfu84@uwo.ca"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
