--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Melbourne, Victoria, Australia"
   employer         : "University of Melbourne"
   uri              : # URL
-  Email            : "xianglongf@student.unimelb.edu.au" 
+  email            : "xianglongf@student.unimelb.edu.au" 
   # Email            : "xfu84@uwo.ca"
 
   # Academic websites
